# makepad

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download_map.sh  download_splat.sh  download_voice.sh  makepad.splash  splash.md  widget_refactor.txt
draw/: Cargo.toml
draw/src/: cx_2d.rs  cx_draw.rs  draw_list_2d.rs  gltf_bridge.rs  icon_atlas.rs  image_cache.rs  lib.rs  match_event.rs  nav.rs  overlay.rs  turtle.rs
draw/src/geometry/: geometry_gen.rs
draw/src/shader/: draw_color.rs  draw_cube.rs  draw_glyph.rs  draw_icon.rs  draw_line.rs  draw_pbr.rs  draw_quad.rs  draw_svg.rs  draw_svg_glyph.rs  draw_text.rs  draw_text_3d.rs  draw_trapezoid.rs  draw_vector.rs  mod.rs  sdf.rs  std.rs
draw/src/svg/: render.rs
draw/src/text/: builtins.rs  font.rs  font_atlas.rs  font_face.rs  font_family.rs  fonts.rs  glyph_outline.rs  glyph_raster_image.rs  image.rs  layouter.rs  loader.rs  mod.rs  rasterizer.rs  selection.rs  shaper.rs
draw/src/vector/: mod.rs
draw/vector/: Cargo.toml
draw2/: Cargo.toml
draw2/src/: cx_3d.rs  cx_draw.rs  draw_list_2d.rs  lib.rs  match_event.rs  nav.rs  overlay.rs  turtle.rs
draw2/src/geometry/: geometry_gen.rs  mod.rs
draw2/src/shader/: draw_glyph.rs  draw_quad.rs  draw_rotated_text.rs  draw_svg.rs  draw_svg_glyph.rs  draw_text.rs  draw_vector.rs  mod.rs  sdf.rs  std.rs
draw2/src/svg/: animate.rs  color.rs  document.rs  gradient.rs  mod.rs  parse.rs  path_data.rs  render.rs  style.rs  transform.rs  units.rs
draw2/src/text/: font.rs  font_atlas.rs  font_face.rs  fonts.rs  glyph_outline.rs  glyph_raster_image.rs  layouter.rs  mod.rs  msdfer.rs  rasterizer.rs  selection.rs  shaper.rs
draw2/src/vector/: mod.rs  paint.rs  path.rs  tessellate.rs  triangulate.rs
examples/aichat/: Cargo.toml
examples/aichat/src/: app.rs  lib.rs  main.rs
examples/automate/: Cargo.toml
examples/automate/src/: app.rs  lib.rs  main.rs
examples/comfyui/: Cargo.toml  flux_dev_full_text_to_image.json
examples/comfyui/src/: app.rs  edmx.rs  lib.rs  main.rs
examples/exf/: Cargo.toml
examples/exf/src/: main.rs
examples/pdf/: Cargo.toml
examples/pdf/src/: app.rs  main.rs
examples/splash/: Cargo.toml
examples/splash/src/: app.rs  main.rs
libs/fast_inflate/: Cargo.toml
libs/fast_inflate/benches/: compress_bench.rs  decompress_bench.rs  pack_bench.rs
libs/fast_inflate/src/: adler32.rs  crc32.rs  crc32_table.inc  decompress.rs  lib.rs
libs/gltf/: Cargo.toml
libs/gltf/src/: buffer.rs  document.rs  error.rs  image.rs  lib.rs  loader.rs  parser.rs  sample_tests.rs
libs/mb3d/: Cargo.toml
libs/mb3d/scenes/: cathedral.m3p
libs/mb3d/src/: exr_meta.rs  formulas.rs  lib.rs  lighting.rs  m3p.rs  main.rs  render.rs  split_f32_test.rs  split_f32_vec2.rs
libs/network/: Cargo.toml
libs/network/src/: backend.rs  http_server.rs  lib.rs  plain_web_socket.rs  runtime.rs  socket_stream.rs  types.rs  utils.rs  web_socket_parser.rs
libs/network/tests/: network_integration.rs
libs/pdf_parse/: Cargo.toml
libs/pdf_parse/src/: content.rs  document.rs  filter.rs  font.rs  image.rs  lexer.rs  lib.rs  object.rs  page.rs  parser.rs  tests.rs
libs/pdf_parse/tests/: .gitignore  download_test_pdfs.sh  real_pdfs.rs
libs/splat/: Cargo.toml
libs/splat/src/: error.rs  lib.rs  model.rs  ply.rs  sog.rs
libs/svg/: Cargo.toml
libs/svg/src/: animate.rs  app.rs  color.rs  document.rs  gradient.rs  lib.rs  main.rs  paint.rs  parse.rs  path.rs  path_data.rs  style.rs  svg.rs  tessellate.rs  transform.rs  units.rs
libs/terminal_core/: Cargo.toml  patch.rs
libs/terminal_core/src/: cell.rs  color.rs  grid.rs  lib.rs  parser.rs  pty.rs  screen.rs  terminal.rs
libs/voice/: Cargo.toml  build.rs
libs/voice/src/: apple_speech.rs  decode_loop.rs  decoder.rs  encoder.rs  lib.rs  mel.rs  metal_backend.rs  model.rs  quant.rs  settings.rs  tensor.rs  transcriber.rs
libs/voice/swift/: speech_bridge.swift
libs/webp/: Cargo.toml
libs/webp/src/: decoder.rs  encoder.rs  extended.rs  lib.rs  vp8.rs
libs/zip_file/: Cargo.toml
libs/zip_file/src/: lib.rs
libs/zune-inflate/: Cargo.toml
libs/zune-jpeg/: Cargo.toml
libs/zune-jpeg/src/: errors.rs  (+15 more)
libs/zune-png/: Cargo.toml
platform/network/: Cargo.toml
platform/studio/: Cargo.toml
studio/: Cargo.toml
studio/ai/: Cargo.toml  ai-impl.txt
studio/backend/: Cargo.toml
studio/desktop/: Cargo.toml  README.md
studio/file_server/: Cargo.toml
studio/hub/: Cargo.toml
studio/src/: app.rs  app_ui.rs  file_tree_view.rs  integration.rs  lib.rs  log_list.rs  main.rs  profiler.rs  run_list.rs  run_view.rs  search.rs  snapshot.rs  studio_editor.rs  studio_file_tree.rs  studio_terminal.rs  tweak_view.rs
widgets/: Cargo.toml  build.rs
widgets/derive_widget/: Cargo.toml
widgets/src/: adaptive_view.rs  animator.rs  bare_step.rs  button.rs  cached_widget.rs  callout_tooltip.rs  chart.rs  check_box.rs  color_picker.rs  command_text_input.rs  defer_with_redraw.rs  designer.rs  designer_data.rs  designer_outline.rs  designer_outline_tree.rs  designer_theme.rs  designer_view.rs  desktop_button.rs  dock.rs  drop_down.rs  expandable_panel.rs  file_tree.rs  flat_list.rs  fold_button.rs  fold_header.rs  gltf_view.rs  html.rs  icon.rs  image.rs  image_blend.rs  image_cache.rs  keyboard_view.rs  label.rs  lib.rs  link_label.rs  loading_spinner.rs  markdown.rs  math.rs  math_view.rs  modal.rs  (+47 more)
widgets/test/: Cargo.toml
widgets2/: Cargo.toml  build.rs
widgets2/derive_widget/: Cargo.toml
widgets2/src/: adaptive_view.rs  animator.rs  bare_step.rs  button.rs  cached_widget.rs  chart.rs  check_box.rs  color_picker.rs  command_text_input.rs  debug_view.rs  defer_with_redraw.rs  designer.rs  designer_outline_tree.rs  desktop_button.rs  dock.rs  drop_down.rs  expandable_panel.rs  file_tree.rs  flat_list.rs  fold_button.rs  fold_header.rs  html.rs  icon.rs  image.rs  image_blend.rs  image_cache.rs  keyboard_view.rs  label.rs  lib.rs  link_label.rs  loading_spinner.rs  map_leaflet.rs  map_style.rs  map_view.rs  markdown.rs  math_view.rs  modal.rs  multi_image.rs  multi_window.rs  nav_control.rs  (+42 more)
widgets2/test/: Cargo.toml
(+1853 files in other folders)
