[package]
name = "makepad-draw2"
version = "2.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad 2d drawing API"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "4ghwd5Pq8xlLJrln_NpXXshbpeE="

[dependencies]
makepad-platform2 = { path = "../platform2", version = "2.0.0" }
makepad-html ={ path = "../libs/html", version = "1.0.0" }
makepad-live-id = { path = "../libs/live_id", version = "1.0.0" }

# HACK(eddyb) only a git dep until https://github.com/RazrFalcon/rustybuzz/pull/71
# ends up being published in a release (only affects build times, not behavior).
makepad-rustybuzz = { version = "0.8.0", path = "../libs/rustybuzz" }
unicode-bidi = "0.3"
ab_glyph_rasterizer = { version = "0.1.8", path = "../libs/ab_glyph_rasterizer"}
sdfer = { path = "../libs/sdfer", version = "0.2.1" }
fxhash = "0.2.1"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.11.0"

# PNG support for emoji fonts - optional via feature (using fast zune-png decoder)
makepad-zune-png = { version = "0.5.1", path = "../libs/zune-png", optional = true }

serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []

## Enables PNG glyph support for emoji fonts
png = ["dep:makepad-zune-png"]

## Enables certain public-facing types to derive serde serialization traits.
serde = ["dep:serde", "makepad-live-id/serde"]
