[package]
name = "makepad-widgets2"
version = "2.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad widgets2"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "N0YGjn7dnhc4DEHmww9lwuYwMVI="

[dependencies]
makepad-draw2 = { path = "../draw2", version = "2.0.0" }
makepad-derive-widget2 = {path = "./derive_widget", version="2.0.0"}

makepad-zune-jpeg = { version = "0.5.12", path = "../libs/zune-jpeg" }
makepad-zune-png = { version = "0.5.1", path = "../libs/zune-png" }
makepad-html = { path = "../libs/html", version = "1.0.0" }
unicode-segmentation = { version = "1.12.0", path = "../libs/unicode-segmentation-1.12.0" }
pulldown-cmark = { version = "0.12.2", path = "../libs/pulldown-cmark-0.12.2", default-features = false, features = ["simd"] }
makepad-latex-math = { path = "../libs/latex_math", version = "0.1.0" }
ttf-parser = { path = "../libs/ttf-parser-0.24.1" }

serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []

## Enables certain public-facing types to derive serde serialization traits.
serde = ["dep:serde", "makepad-draw2/serde", "makepad-derive-widget2/serde"]
