[package]
name = "makepad-example-aichat"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "AI Chat example demonstrating makepad-ai library"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets2 = { path = "../../widgets2", features = ["maps", "pdf"] }
makepad-code-editor2 = { path = "../../code_editor2" }
makepad-ai = { path = "../../studio/ai" }
