[package]
name = "makepad-example-automate"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Home automation MIDI + DMX controller dashboard example"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "2.0.0" }
makepad-micro-serde = { path = "../../libs/micro_serde", version = "1.0.0" }
