[package]
name = "makepad-example-comfyui"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Local comfyUI frontend wip"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "BkQvnL-yt07_4n3oopSxq7yCP_w="

[dependencies]
makepad-draw2 = { path = "../../draw2", version = "2.0.0" }