[package]
name = "makepad-example-exf"
version = "1.0.0"
edition = "2021"
description = "Makepad EXR fractal viewer example"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "2.0.0" }
makepad-openexr = { path = "../../libs/openexr", version = "0.1.0" }
