[package]
name = "makepad-example-pdf"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad PDF viewer example"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "2.0.0", features = ["pdf"] }
makepad-pdf-parse = { path = "../../libs/pdf_parse", version = "1.0.0" }
