[package]
name = "makepad-example-splash"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad splash example"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "EVyKRfOGV339Re5CS45PMHHxw_M="

[dependencies]
makepad-widgets2 = { path = "../../widgets2", version = "2.0.0", features=["png"]}