[package]
name = "makepad-pdf-parse"
version = "1.0.0"
edition = "2021"
description = "Minimal PDF parser for Makepad - text, vector graphics, and images"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-zune-inflate = { path = "../zune/zune-inflate", version = "0.2.0", default-features = false, features = ["zlib"] }
