[package]
name = "makepad-splat"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "PLY and SOG gaussian splat parsing for Makepad"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"

[dependencies]
makepad-micro-serde = { path = "../micro_serde", version = "1.0.0" }
makepad-zip-file = { path = "../zip_file", version = "1.0.0" }
makepad-webp = { path = "../webp", version = "0.2.4" }
