[package]
name = "makepad-voice"
version = "0.1.0"
edition = "2021"
description = "Pure Rust CPU-only SIMD+threaded Whisper inference"
license = "MIT"

[dependencies]

[[bin]]
name = "whisper-test"
path = "src/bin/whisper_test.rs"

[[bin]]
name = "apple-speech-test"
path = "src/bin/apple_speech_test.rs"
