[package]
name = "makepad-webp"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebP decoding (and optional encoding) in pure Rust, inhoused for makepad"

[features]
default = []
encoder = []

[dependencies]
makepad-byteorder-lite = { path = "../byteorder-lite", version = "0.1.0" }
