[package]
name = "makepad-zip-file"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Simple zip file reader"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"

[dependencies]
makepad-fast-inflate = { path = "../fast_inflate" }
