[package]
name = "makepad-zune-png"
version = "0.5.1"
authors = ["caleb <etemesicaleb@gmail.com>"]
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/zune-png"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["png", "png-decoder", "decoder"]
categories = ["multimedia::images"]
exclude = ["/benches/images/*", "/tests/*", "/.idea/*", "/.gradle/*", "/test-images/*", "fuzz/*"]
description = "A fast, correct and safe png decoder"

[features]
sse = []
std = ["makepad-zune-core/std"]
log = ["makepad-zune-core/log"]
portable-simd = []
default = ["sse", "std"]

[dependencies]
makepad-zune-core = { path = "../zune-core", version = "0.5.1" }
makepad-zune-inflate = { path = "../zune-inflate", version = "0.2", default-features = false, features = ["zlib"] }
