[package]
name = "makepad-studio-backend"
version = "0.1.0"
edition = "2021"
description = "Studio2 backend (protocol + gateway + virtual fs)"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-network = { path = "../../libs/network", version = "1.0.0" }
makepad-script = { path = "../../platform/script", version = "1.0.0" }
makepad-studio-protocol = { path = "../../platform/studio_protocol", version = "0.1.0" }
makepad-micro-serde = { path = "../../libs/micro_serde", version = "1.0.0" }
makepad-git = { path = "../../libs/git", version = "0.1.0" }
makepad-live-id = { path = "../../libs/live_id", version = "1.0.0" }
makepad-terminal-core = { path = "../../libs/terminal_core", version = "1.0.0" }
makepad-filesystem-watcher = { path = "../../libs/filesystem_watcher", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
